--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,7 @@
 
 @import "blocks/btn";
 @import "blocks/button";
+@import "blocks/slider-buttons";
 @import "blocks/modal";
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
@@ -28,7 +29,9 @@
 @import "blocks/hero-block";
 @import "blocks/audio-card";
 @import "blocks/tours";
-@import "blocks/slider-buttons";
+@import "blocks/tour-card";
+@import "blocks/education";
+@import "blocks/instructor-card";
 
 // ---------------------------------
 
