--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -74,6 +74,15 @@
 .title-typical {
   color: $color-elephant;
   position: relative;
+  padding-top: 20px;
+
+  @include vp-1199 {
+    padding-top: 15px;
+  }
+
+  @include vp-767 {
+    padding-top: 4px;
+  }
 
   span {
     font-weight: 800;
@@ -82,16 +91,39 @@
     opacity: 0.03;
     display: block;
     margin: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: max-content;
+    word-break: break-word;
+
+    @include vp-1199 {
+      font-size: 40px;
+      line-height: 40px;
+    }
+
+    @include vp-767 {
+      font-size: 26px;
+      line-height: 26px;
+    }
   }
 
   h2 {
     font-weight: 800;
     font-size: 35px;
     line-height: 35px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
     display: block;
     margin: 0;
+    word-break: break-word;
+
+    @include vp-1199 {
+      font-size: 25px;
+      line-height: 25px;
+    }
+
+    @include vp-767 {
+      font-size: 22px;
+      line-height: 22px;
+    }
   }
 }
