--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,6 +32,12 @@
 @import "blocks/tour-card";
 @import "blocks/education";
 @import "blocks/instructor-card";
+@import "blocks/about";
+@import "blocks/feedbacks";
+@import "blocks/feedback-card";
+@import "blocks/advantages";
+@import "blocks/gallery";
+@import "blocks/ask";
 
 // ---------------------------------
 
