--- a/source/sass/blocks/hero-block.scss
+++ b/source/sass/blocks/hero-block.scss
@@ -13,6 +13,16 @@
   background-position: center;
   width: 100%;
   height: auto;
+  position: relative;
+
+  &::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(112deg, rgba($color-black-russian, 0.33) 17.23%, transparent 94.93%);
+  }
 
   &--сaucasus {
     background-image: url("../img/hero-block/background-1-desktop-1x.jpg");
