--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,13 +11,15 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
 $color-neon-blue:                   #2c39f2;
-$color-torch-red:                   #ff1553;
+$color-torch-red:                   #ff121f;
 $color-cornflower-blue:             #6c8de4;
 $color-elephant:                    #2d383f;
 $color-navy-blue:                   #0266c1;
 $color-resolution-blue:             #1c3374;
 $color-ghost-white:                 #f5f6fa;
 $color-midnight-express:            #0b1230;
+$color-black-russian:               #0f1429;
+$color-pine-tree:                   #131a0b;
 
 // Gradient
 
