--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,8 @@
 @import "vendor/normalize";
 // Swiper 7.4.1
 @import "vendor/swiper";
+// Leaflet 1.7.1
+@import "vendor/leaflet";
 
 // Global
 // ---------------------------------
@@ -38,6 +40,8 @@
 @import "blocks/advantages";
 @import "blocks/gallery";
 @import "blocks/ask";
+@import "blocks/contacts";
+@import "blocks/page-footer";
 
 // ---------------------------------
 
