--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,5 +1,6 @@
 .advantages {
   padding: 50px 0;
+  position: relative;
 
   @include vp-1199 {
     padding-bottom: 15px;
@@ -7,6 +8,48 @@
 
   @include vp-767 {
     padding: 0;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 705px;
+    height: 391px;
+    left: 0;
+    top: -170px;
+    z-index: -1;
+    background-image: url("../img/clouds/clouds-5-1x.png");
+
+    @include retina {
+      background-image: url("../img/clouds/clouds-5-2x.png");
+    }
+
+    @include vp-1199 {
+      display: none;
+    }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 602px;
+    height: 263px;
+    right: 0;
+    top: 10px;
+    z-index: -1;
+    background-image: url("../img/clouds/clouds-4-1x.png");
+
+    @include retina {
+      background-image: url("../img/clouds/clouds-4-2x.png");
+    }
+
+    @include vp-1199 {
+      display: none;
+    }
   }
 }
 
