--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,7 @@
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
 @import "blocks/page-header";
+@import "blocks/screen-shadow";
 @import "blocks/hero-block";
 @import "blocks/audio-card";
 @import "blocks/tours";
