--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -16,59 +16,50 @@
     display: block;
     width: 808px;
     height: 474px;
-    background-image: url("../img/about-desktop-1x.jpg");
     background-repeat: no-repeat;
     background-size: contain;
     position: absolute;
     top: 75px;
     left: 0;
     z-index: -1;
+    background-image: image-set(
+        url("../img/about-desktop-1x.webp") type("image/webp"),
+        url("../img/about-desktop-1x.jpg") type("image/jpg"));
 
     @include retina {
-      background-image: url("../img/about-desktop-2x.jpg");
+      background-image: image-set(
+          url("../img/about-desktop-2x.webp") type("image/webp"),
+          url("../img/about-desktop-2x.jpg") type("image/jpg"));
     }
 
     @include vp-1199 {
-      background-image: url("../img/about-tablet-1x.jpg");
-      width: 600px;
-      height: 403px;
+      width: 475px;
+      height: 402px;
       top: 60px;
+      background-image: image-set(
+          url("../img/about-tablet-1x.webp") type("image/webp"),
+          url("../img/about-tablet-1x.jpg") type("image/jpg"));
 
       @include retina {
-        background-image: url("../img/about-tablet-2x.jpg");
+        background-image: image-set(
+            url("../img/about-tablet-2x.webp") type("image/webp"),
+            url("../img/about-tablet-2x.jpg") type("image/jpg"));
       }
     }
 
     @include vp-767 {
-      background-image: url("../img/about-mobile-1x.jpg");
-      top: -16px;
       width: 320px;
-      height: 400px;
+      height: 402px;
+      top: -16px;
+      background-image: image-set(
+          url("../img/about-mobile-1x.webp") type("image/webp"),
+          url("../img/about-mobile-1x.jpg") type("image/jpg"));
 
       @include retina {
-        background-image: url("../img/about-mobile-2x.jpg");
+        background-image: image-set(
+            url("../img/about-mobile-2x.webp") type("image/webp"),
+            url("../img/about-mobile-2x.jpg") type("image/jpg"));
       }
-    }
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 618px;
-    height: 280px;
-    right: 0;
-    top: -90px;
-    z-index: -1;
-    background-image: url("../img/clouds/clouds-3-1x.png");
-
-    @include retina {
-      background-image: url("../img/clouds/clouds-3-2x.png");
-    }
-
-    @include vp-1199 {
-      display: none;
     }
   }
 
@@ -120,7 +111,7 @@
     padding: 0 15px;
   }
 
-  @media(min-width: 3000px) {
+  @media (min-width: 3000px) {
     padding: 0 120px;
   }
 }
