--- a/source/sass/blocks/ask.scss
+++ b/source/sass/blocks/ask.scss
@@ -4,25 +4,37 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url("../img/form-background-desktop-1x.jpg");
+  background-image: image-set(
+    url("../img/form-background-desktop-1x.webp") type("image/webp"),
+    url("../img/form-background-desktop-1x.jpg") type("image/jpg"));
 
   @include retina {
-    background-image: url("../img/form-background-desktop-2x.jpg");
+    background-image: image-set(
+      url("../img/form-background-desktop-2x.webp") type("image/webp"),
+      url("../img/form-background-desktop-2x.jpg") type("image/jpg"));
   }
 
   @include vp-1199 {
-    background-image: url("../img/form-background-tablet-1x.jpg");
+    background-image: image-set(
+      url("../img/form-background-tablet-1x.webp") type("image/webp"),
+      url("../img/form-background-tablet-1x.jpg") type("image/jpg"));
 
     @include retina {
-      background-image: url("../img/form-background-tablet-2x.jpg");
+      background-image: image-set(
+        url("../img/form-background-tablet-2x.webp") type("image/webp"),
+        url("../img/form-background-tablet-2x.jpg") type("image/jpg"));
     }
   }
 
   @include vp-767 {
-    background-image: url("../img/form-background-mobile-1x.jpg");
+    background-image: image-set(
+      url("../img/form-background-mobile-1x.webp") type("image/webp"),
+      url("../img/form-background-mobile-1x.jpg") type("image/jpg"));
 
     @include retina {
-      background-image: url("../img/form-background-mobile-2x.jpg");
+      background-image: image-set(
+        url("../img/form-background-mobile-2x.webp") type("image/webp"),
+        url("../img/form-background-mobile-2x.jpg") type("image/jpg"));
     }
   }
 
