--- a/source/sass/blocks/education.scss
+++ b/source/sass/blocks/education.scss
@@ -146,13 +146,6 @@
   height: auto;
 }
 
-.education__process {
-
-}
-
-.education__process-container {
-}
-
 .education__list {
   position: relative;
   list-style-type: none;
@@ -175,7 +168,7 @@
   }
 
   &::after {
-    content: '';
+    content: "";
     width: 100%;
     height: 1px;
     background-color: $color-default-white;
@@ -194,12 +187,12 @@
       display: none;
     }
 
-      > :nth-child(4n - 3) {
+    li:nth-child(4n - 3) {
       position: relative;
       grid-column: 1 / 2;
 
       &::before {
-        content: '';
+        content: "";
         width: 14px;
         height: 14px;
         background-color: $color-navy-blue;
@@ -211,7 +204,7 @@
       }
 
       &::after {
-        content: '';
+        content: "";
         width: 100%;
         height: 1px;
         background-color: rgba($color-navy-blue, 0.2);
@@ -226,7 +219,7 @@
       grid-column: 2 / 3;
 
       &::before {
-        content: '';
+        content: "";
         width: 14px;
         height: 14px;
         background-color: $color-navy-blue;
@@ -243,7 +236,7 @@
       grid-column: 2 / 3;
 
       &::before {
-        content: '';
+        content: "";
         width: 14px;
         height: 14px;
         background-color: $color-navy-blue;
@@ -255,7 +248,7 @@
       }
 
       &::after {
-        content: '';
+        content: "";
         width: 1px;
         height: 54px;
         background-color: rgba($color-navy-blue, 0.2);
@@ -272,7 +265,7 @@
       grid-column: 1 / 2;
 
       &::before {
-        content: '';
+        content: "";
         width: 14px;
         height: 14px;
         background-color: $color-navy-blue;
@@ -284,7 +277,7 @@
       }
 
       &::after {
-        content: '';
+        content: "";
         width: 100%;
         height: 1px;
         background-color: rgba($color-navy-blue, 0.2);
@@ -309,7 +302,7 @@
       align-items: center;
 
       &::before {
-        content: '';
+        content: "";
         width: 13px;
         height: 13px;
         background-color: $color-navy-blue;
@@ -323,7 +316,7 @@
       }
 
       &::after {
-        content: '';
+        content: "";
         width: 1px;
         height: 100%;
         background-color: rgba($color-navy-blue, 0.2);
@@ -372,7 +365,7 @@
 
   @media (min-width: 1200px) {
     &::before {
-      content: '';
+      content: "";
       width: 14px;
       height: 14px;
       background-color: $color-navy-blue;
@@ -384,7 +377,7 @@
     }
 
     &::after {
-      content: '';
+      content: "";
       width: 100%;
       height: 1px;
       background-color: rgba($color-navy-blue, 0.2);
