--- a/source/sass/blocks/hero-block.scss
+++ b/source/sass/blocks/hero-block.scss
@@ -3,10 +3,6 @@
   margin-top: -63px;
 }
 
-.hero-block__slider {
-
-}
-
 .hero-block__slide {
   background-repeat: no-repeat;
   background-size: cover;
@@ -25,73 +21,109 @@
   }
 
   &--сaucasus {
-    background-image: url("../img/hero-block/background-1-desktop-1x.jpg");
+    background-image: image-set(
+      url("../img/hero-block/background-1-desktop-1x.webp") type("image/webp"),
+      url("../img/hero-block/background-1-desktop-1x.jpg") type("image/jpg"));
 
     @include retina {
-      background-image: url("../img/hero-block/background-1-desktop-2x.jpg");
+      background-image: image-set(
+        url("../img/hero-block/background-1-desktop-2x.webp") type("image/webp"),
+        url("../img/hero-block/background-1-desktop-2x.jpg") type("image/jpg"));
     }
 
     @include vp-1199 {
-      background-image: url("../img/hero-block/background-1-tablet-1x.jpg");
+      background-image: image-set(
+        url("../img/hero-block/background-1-tablet-1x.webp") type("image/webp"),
+        url("../img/hero-block/background-1-tablet-1x.jpg") type("image/jpg"));
 
       @include retina {
-        background-image: url("../img/hero-block/background-1-tablet-2x.jpg");
+        background-image: image-set(
+          url("../img/hero-block/background-1-tablet-2x.webp") type("image/webp"),
+          url("../img/hero-block/background-1-tablet-2x.jpg") type("image/jpg"));
       }
     }
 
     @include vp-767 {
-      background-image: url("../img/hero-block/background-1-mobile-1x.jpg");
+      background-image: image-set(
+        url("../img/hero-block/background-1-mobile-1x.webp") type("image/webp"),
+        url("../img/hero-block/background-1-mobile-1x.jpg") type("image/jpg"));
 
       @include retina {
-        background-image: url("../img/hero-block/background-1-mobile-2x.jpg");
+        background-image: image-set(
+          url("../img/hero-block/background-1-mobile-2x.webp") type("image/webp"),
+          url("../img/hero-block/background-1-mobile-2x.jpg") type("image/jpg"));
       }
     }
   }
 
   &--kamchatka {
-    background-image: url("../img/hero-block/background-2-desktop-1x.jpg");
+    background-image: image-set(
+      url("../img/hero-block/background-2-desktop-1x.webp") type("image/webp"),
+      url("../img/hero-block/background-2-desktop-1x.jpg") type("image/jpg"));
 
     @include retina {
-      background-image: url("../img/hero-block/background-2-desktop-2x.jpg");
+      background-image: image-set(
+        url("../img/hero-block/background-2-desktop-2x.webp") type("image/webp"),
+        url("../img/hero-block/background-2-desktop-2x.jpg") type("image/jpg"));
     }
 
     @include vp-1199 {
-      background-image: url("../img/hero-block/background-2-tablet-1x.jpg");
+      background-image: image-set(
+        url("../img/hero-block/background-2-tablet-1x.webp") type("image/webp"),
+        url("../img/hero-block/background-2-tablet-1x.jpg") type("image/jpg"));
 
       @include retina {
-        background-image: url("../img/hero-block/background-2-tablet-2x.jpg");
+        background-image: image-set(
+          url("../img/hero-block/background-2-tablet-2x.webp") type("image/webp"),
+          url("../img/hero-block/background-2-tablet-2x.jpg") type("image/jpg"));
       }
     }
 
     @include vp-767 {
-      background-image: url("../img/hero-block/background-2-mobile-1x.jpg");
+      background-image: image-set(
+        url("../img/hero-block/background-2-mobile-1x.webp") type("image/webp"),
+        url("../img/hero-block/background-2-mobile-1x.jpg") type("image/jpg"));
 
       @include retina {
-        background-image: url("../img/hero-block/background-2-mobile-2x.jpg");
+        background-image: image-set(
+          url("../img/hero-block/background-2-mobile-2x.webp") type("image/webp"),
+          url("../img/hero-block/background-2-mobile-2x.jpg") type("image/jpg"));
       }
     }
   }
 
   &--altai {
-    background-image: url("../img/hero-block/background-3-desktop-1x.jpg");
+    background-image: image-set(
+      url("../img/hero-block/background-3-desktop-1x.webp") type("image/webp"),
+      url("../img/hero-block/background-3-desktop-1x.jpg") type("image/jpg"));
 
     @include retina {
-      background-image: url("../img/hero-block/background-3-desktop-2x.jpg");
+      background-image: image-set(
+        url("../img/hero-block/background-3-desktop-2x.webp") type("image/webp"),
+        url("../img/hero-block/background-3-desktop-2x.jpg") type("image/jpg"));
     }
 
     @include vp-1199 {
-      background-image: url("../img/hero-block/background-3-tablet-1x.jpg");
+      background-image: image-set(
+        url("../img/hero-block/background-3-tablet-1x.webp") type("image/webp"),
+        url("../img/hero-block/background-3-tablet-1x.jpg") type("image/jpg"));
 
       @include retina {
-        background-image: url("../img/hero-block/background-3-tablet-2x.jpg");
+        background-image: image-set(
+          url("../img/hero-block/background-3-tablet-2x.webp") type("image/webp"),
+          url("../img/hero-block/background-3-tablet-2x.jpg") type("image/jpg"));
       }
     }
 
     @include vp-767 {
-      background-image: url("../img/hero-block/background-3-mobile-1x.jpg");
+      background-image: image-set(
+        url("../img/hero-block/background-3-mobile-1x.webp") type("image/webp"),
+        url("../img/hero-block/background-3-mobile-1x.jpg") type("image/jpg"));
 
       @include retina {
-        background-image: url("../img/hero-block/background-3-mobile-2x.jpg");
+        background-image: image-set(
+          url("../img/hero-block/background-3-mobile-2x.webp") type("image/webp"),
+          url("../img/hero-block/background-3-mobile-2x.jpg") type("image/jpg"));
       }
     }
   }
@@ -234,7 +266,7 @@
 }
 
 .hero-block__info-item {
-  border: 1px solid rgba($color-default-white, 0.50);
+  border: 1px solid rgba($color-default-white, 0.5);
   padding: 14px 20px;
   font-size: 12px;
   line-height: 16px;
