--- a/source/sass/blocks/tour-card.scss
+++ b/source/sass/blocks/tour-card.scss
@@ -46,7 +46,7 @@
     }
 
     &::after {
-      content: '';
+      content: "";
       display: block;
       width: 80px;
       height: 1px;
@@ -66,7 +66,7 @@
   justify-content: flex-end;
   height: 100%;
   width: 100%;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 22.3%, rgba(0, 0, 0, 0.00) 60.32%);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.6) 22.3%, rgba(0, 0, 0, 0) 60.32%);
   padding: 27px 20px;
 }
 
