--- a/source/sass/blocks/feedback-card.scss
+++ b/source/sass/blocks/feedback-card.scss
@@ -20,6 +20,7 @@
 }
 
 .feedback-card__avatar {
+  align-self: flex-start;
   flex-basis: content;
   min-width: 258px;
   min-height: 253px;
@@ -39,11 +40,11 @@
   }
 
   picture {
-    height: 100%;
+    height: auto;
     object-fit: cover;
 
     @include vp-767 {
-      width: 100%;
+      width: auto;
       height: auto;
       object-fit: cover;
     }
