--- a/source/sass/blocks/tour-card.scss
+++ b/source/sass/blocks/tour-card.scss
@@ -1,27 +1,20 @@
 .tour-card {
   position: relative;
-  min-height: 412px;
-  max-height: 100%;
   height: auto;
   color: $color-default-white;
   background-color: $color-navy-blue;
 
   picture {
-    position: absolute;
+    position: relative;
+    z-index: 1;
     inset: 0;
-    object-fit: cover;
-    min-width: 100%;
-    width: auto;
-    height: 100%;
-    min-height: 412px;
+    width: 100%;
+    height: auto;
   }
 
   img {
-    min-width: 100%;
-    width: auto;
-    object-fit: cover;
-    height: 100%;
-    min-height: 412px;
+    width: 100%;
+    height: auto;
   }
 
   h3 {
@@ -59,7 +52,8 @@
 }
 
 .tour-card__text-content {
-  position: relative;
+  position: absolute;
+  top: 0;
   z-index: 2;
   display: flex;
   flex-direction: column;
