--- a/source/sass/blocks/hero-block.scss
+++ b/source/sass/blocks/hero-block.scss
@@ -11,6 +11,14 @@
   height: auto;
   position: relative;
 
+  @include vp-1199 {
+    min-height: 1086px;
+  }
+
+  @include vp-767 {
+    min-height: 632px;
+  }
+
   &::after {
     content: "";
     width: 100%;
